<resources>
    <!-- Top level text -->
    <string name="app_name">Flow</string>

    <!-- Menu text -->
    <string name="menu_news">News</string>
    <string name="menu_search">Search</string>
    <string name="menu_bookmarks">Bookmarks</string>

    <!-- Search result text -->
    <string name="search_hint">Search news</string>
    <string name="empty_search">Type something to search</string>
    <string name="empty_search_result">No results found</string>
    <string name="no_more_result">No more result</string>
    <string name="no_bookmarks">No bookmarks</string>
    <string name="retry">Retry</string>
    <string name="unknown_error">Unknown error</string>

    <!-- Settings text -->
    <string name="settings">Settings</string>
    <string name="dark_mode_preference">Dark mode preference</string>
    <string name="dark_mode_default">System default</string>
    <string name="dark_mode_light">Light</string>
    <string name="dark_mode_dark">Dark</string>
    <string name="ok">OK</string>
    <string name="ad">Ad</string>
    <string name="more_news">More content</string>
</resources>